auth callback for telegram
